--- a/index.html
+++ b/index.html
@@ -34,33 +34,40 @@
 
 <body>
     <section class="section-home">
-        <nav class="navbar">
-            <div class="enough">
-            </div>
-            <div class="menu">
-                <a href="index.html">Inicio</a>
-                <a href="index.html">Sobre Nós</a>
-                <a href="products.html">Produtos</a>
-                <a href="#">Contatos</a>
-            </div>
-            <div class="btn-contact">
-                <a href="forms.html">Entre em contato</a>
-            </div>
-        </nav>
+        <header class="header">
+            <input type="checkbox" id="check">
+            <label for="check" class="icons">
+                <i class="fa-solid fa-bars" id="menu_icon"></i>
+                <i class="fa-solid fa-x" id="close_icon"></i>
+            </label>
+            <nav class="navbar">
+                <div class="enough">
+                </div>
+                <div class="menu">
+                    <a href="index.html">Inicio</a>
+                    <a href="index.html">Sobre Nós</a>
+                    <a href="products.html">Produtos</a>
+                    <a href="#">Contatos</a>
+                </div>
+                <div class="btn-contact">
+                    <a href="forms.html">Entre em contato</a>
+                </div>
+            </nav>
+        </header>
         <div class="line">
         </div>
-            <div class="info-home">
-                <div class="home-description">
-                    <span>Conheça a CoffeeShop</span>
-                    <h1 class="title">Desfrute de uma experiência <br> deliciosa e autêntica</h1>
-                    <p class="descripton">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati sed,
-                        mollitia
-                        temporibus reprehenderit deleniti nobis quis!!</p>
-                    <div class="btn-contact">
-                        <a href="#">Compre Já</a>
-                    </div>
+        <div class="info-home">
+            <div class="home-description">
+                <span>Conheça a CoffeeShop</span>
+                <h1 class="title">Desfrute de uma experiência <br> deliciosa e autêntica</h1>
+                <p class="descripton">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati sed,
+                    mollitia
+                    temporibus reprehenderit deleniti nobis quis!!</p>
+                <div class="btn-contact">
+                    <a href="#">Compre Já</a>
                 </div>
             </div>
+        </div>
     </section>
     <section id="about">
         <div class="title-about">
