--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a href="index.html">Inicio</a>
                     <a href="index.html">Sobre Nós</a>
                     <a href="products.html">Produtos</a>
-                    <a href="#">Contatos</a>
+                    <a href="forms.html">Contatos</a>
                 </div>
                 <div class="btn-contact">
                     <a href="forms.html">Entre em contato</a>
@@ -146,7 +146,7 @@
             </div>
             <div class="item">
                 <h2>Café French</h2>
-                <img src="img/5.png" alt="">
+                <img src="img/5.png" alt="t">
                 <p>Lorem, ipsum dolor sit amet</p>
                 <span>15.90</span>
                 <div class="btn-cards">
