--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         elit.</span>
                 </div>
                 <div class="btn-contact">
-                    <a href="#">Fale conosco</a>
+                    <a href="forms.html">Fale conosco</a>
                 </div>
                 <img src="img/about2.jpg" alt="">
             </div>
