--- a/forms.html
+++ b/forms.html
@@ -6,26 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forms</title>
     <link rel="stylesheet" href="forms.css">
+    <!--External Icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+        integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <section class="contact">
-        <nav class="navbar">
-            <div class="enough">
-            </div>
-            <div class="menu">
-                <a href="index.html">Inicio</a>
-                <a href="index.html">Sobre Nós</a>
-                <a href="products.html">Produtos</a>
-                <a href="#">Contatos</a>
-            </div>
-            <div class="btn-contact">
-                <a href="forms.html">Entre em contato</a>
-            </div>
-        </nav>
+        <header class="header">
+            <input type="checkbox" id="check">
+            <label for="check" class="icons">
+                <i class="fa-solid fa-bars" id="menu_icon"></i>
+                <i class="fa-solid fa-x" id="close_icon"></i>
+            </label>
+            <nav class="navbar">
+                <div class="enough">
+                </div>
+                <div class="menu">
+                    <a href="index.html">Inicio</a>
+                    <a href="index.html">Sobre Nós</a>
+                    <a href="products.html">Produtos</a>
+                    <a href="forms.html">Contatos</a>
+                </div>
+                <div class="btn-contact">
+                    <a href="forms.html">Entre em contato</a>
+                </div>
+            </nav>
+        </header>
         <div class="line">
         </div>
-
         <h2>Entre em contato</h2>
         <div class="forms-section">
             <form action="#">
