--- a/products.html
+++ b/products.html
@@ -6,10 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="products.css">
+    <!--External Icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+        integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body class="">
-    <header>
+    <header class="header">
+        <input type="checkbox" id="check">
+        <label for="check" class="icons">
+            <i class="fa-solid fa-bars" id="menu_icon"></i>
+            <i class="fa-solid fa-x" id="close_icon"></i>
+        </label>
         <nav class="navbar">
             <div class="enough">
             </div>
@@ -17,15 +26,15 @@
                 <a href="index.html">Inicio</a>
                 <a href="index.html">Sobre Nós</a>
                 <a href="products.html">Produtos</a>
-                <a href="#">Contatos</a>
+                <a href="forms.html">Contatos</a>
             </div>
             <div class="btn-contact">
                 <a href="forms.html">Entre em contato</a>
             </div>
         </nav>
-        <div class="line">
-        </div>
     </header>
+    <div class="line">
+    </div>
     <div class="container">
         <div class="produtos-top">
             <div class="title">Nossos Produtos</div>
@@ -42,16 +51,18 @@
         </div>
     </div>
     <div class="cartTab">
-        <h1>Shopping Cart</h1>
+        <h1>Carrinho</h1>
         <div class="listCart">
 
         </div>
         <div class="btn">
-            <button class="close">CLOSE</button>
-            <button class="checkOut">Check Out</button>
+            <button class="close">Fechar</button>
+            <button class="checkOut">Finalizar Compra</button>
         </div>
     </div>
-
+    <div class="btn-more">
+        <a href="forms-products.html">Adicionar mais produtos</a>
+    </div>
     <script src="products.js"></script>
 </body>
 
