--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </div>
         </div>
         <div class="btn-produtos">
-            <a href="#">Ver mais produtos</a>
+            <a href="products.html">Ver mais produtos</a>
         </div>
     </section>
     <section class="contact">
