--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                 </div>
             </div>
             <div class="second-info">
-                <p>Somos mais do que um restaurante, somos uma história de sucesso familiar. Desde o início, buscamos
-                    proporcionar momentos especiais através da nossa culinária única e do nosso atendimento excepcional.
+                <p>Somos mais do que uma cafeteria, somos uma história de sucesso. Desde o início, buscamos
+                    proporcionar momentos especiais através da nossa qualidade e do nosso atendimento excepcional.
                 </p>
                 <div class="spans-about">
                     <span><i class="fa-solid fa-check"></i>Lorem ipsum dolor sit amet consectetur, adipisicing
