--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
         <div class="infos-about">
             <div class="first-info">
-                <h2>Coisas boas acontecem para aqueles que cozinham para os outros</h2>
+                <h2>Coisas boas acontecem para aqueles que transmite experiências para os outros</h2>
                 <img src="img/about1.jpg" alt="">
                 <div class="card-about">
                     <a href="#">
